# databrary

./: .bowerrc  .editorconfig  .ghci  .gitignore  .gitmodules  .jshintrc  Makefile  README  README.md  Setup.hs  api-spec.txt  bower.json  build.sbt  databrary.cabal  databrary.conf  deploy  dev  index.html  messages.conf  messages_report.sh  package.json  schema.sql
Control/: Has.hs
Control/Applicative/: Ops.hs
Control/Monad/: Has.hs
Data/Tuple/: Apply.hs
Databrary/: Action.hs  App.hs  Crypto.hs  DB.hs  Entropy.hs  Enum.hs  Files.hs  HTTP.hs  Has.hs  Identity.hs  Iso.hs  JSON.hs  Kind.hs  Mail.hs  Main.hs  Ops.hs  PG.hs  Passwd.hs  Resource.hs  ResourceT.hs  Route.hs  Routes.hs  Routes.hs-boot  Service.hs  Spock.hs  Store.hs  Time.hs  Types.hs  URL.hs  Wai.hs  Warp.hs  Web.hs
Databrary/Action/: App.hs  Auth.hs  Form.hs  Object.hs  Request.hs  Response.hs  Route.hs  Types.hs  Wai.hs
Databrary/Controller/: Analytics.hs  Angular.hs  Angular.hs-boot  Asset.hs  Asset.hs-boot  AssetSegment.hs  AssetSegment.hs-boot  Audit.hs  Authorize.hs  Authorize.hs-boot  CSV.hs  Citation.hs  Comment.hs  Comment.hs-boot  Container.hs  Container.hs-boot  Excerpt.hs  Form.hs  Format.hs  Funding.hs  Login.hs  Login.hs-boot  Party.hs  Party.hs-boot  Paths.hs  Permission.hs  Record.hs  Record.hs-boot  Register.hs  Register.hs-boot  Root.hs  Root.hs-boot  Slot.hs  Slot.hs-boot  SlotAsset.hs  Static.hs  Tag.hs  Token.hs  Token.hs-boot  Transcode.hs  (+8 more)
Databrary/HTTP/: Client.hs  Cookie.hs  File.hs  Form.hs  Parse.hs  Path.hs  Request.hs  Route.hs
Databrary/Identity/: Types.hs
Databrary/Iso/: Prim.hs  TH.hs  Types.hs
Databrary/Media/: AV.hsc  av.c  av.h
Databrary/Model/: Age.hs  Asset.hs  AssetSegment.hs  AssetSlot.hs  Audit.hs  Authorize.hs  Citation.hs  Comment.hs  Consent.hs  Container.hs  Enum.hs  Excerpt.hs  Format.hs  Funding.hs  GeoNames.hs  Id.hs  Identity.hs  Inet.hs  Measure.hs  Metric.hs  Offset.hs  Party.hs  Permission.hs  Record.hs  RecordCategory.hs  RecordSlot.hs  Release.hs  SQL.hs  Segment.hs  Slot.hs  SlotAsset.hs  Tag.hs  Time.hs  Token.hs  Transcode.hs  URL.hs  Volume.hs  VolumeAccess.hs
Databrary/Resource/: DB.hs  Entropy.hs  Secret.hs
Databrary/Service/: Crypto.hs  DB.hs  Entropy.hs  Init.hs  Log.hs  Mail.hs  Messages.hs  Passwd.hs  ResourceT.hs  Types.hs
Databrary/Setup/: DB.hs  Git.hs  Node.hs
Databrary/Snaplet/: Entropy.hs  PG.hs
Databrary/Store/: AV.hsc  Asset.hs  AssetSegment.hs  Filename.hs  Service.hs  Storage.hs  Temp.hs  Transcode.hs  Transcoder.hs  Types.hs  Upload.hs  Zip.hs
Databrary/Types/: Identity.hs  Time.hs
Databrary/View/: Angular.hs  Asset.hs  Authorize.hs  Comment.hs  Container.hs  Form.hs  Format.hs  Html.hs  Login.hs  Party.hs  Record.hs  Register.hs  Root.hs  Template.hs  Token.hs  Volume.hs  VolumeAccess.hs
Databrary/Web/: Cache.hs  Client.hs  Coffee.hs  Constants.hs  Cookie.hs  Deform.hs  File.hs  Files.hs  Form.hs  Generate.hs  HTTP.hs  Info.hs  Libs.hs  Messages.hs  Parse.hs  Request.hs  Route.hs  Routes.hs  Rules.hs  Rules.hs-boot  Service.hs  Stylus.hs  Templates.hs  Types.hs  Uglify.hs  Wai.hs
api/: Global$.html  Routes$.html  index.html  index.js  package.html
api/controllers/: AHtmlForm.html  ActionChecker.html  ActionCreator.html  ActionFunction.html  ActionHandler.html  ActionRefiner.html  ActionTransformer.html  AngularController$$CiteForm.html  AngularController$.html  AnonRequest.html  ApiController.html  ApiException.html  ApiForm.html  Asset$.html  AssetApi$$TranscodedForm.html  AssetApi$.html  AssetController$$AssetForm.html  AssetController$$AssetUpdateForm.html  AssetController$$AssetUploadForm.html  AssetController$$ChangeForm.html  AssetController$$ReplaceForm.html  AssetController$$UploadForm.html  AssetController$.html  AssetHtml$$TranscodeForm.html  AssetHtml$.html  Comment$.html  CommentApi$.html  CommentController$$CommentForm.html  CommentController$$Form.html  CommentController$$SlotForm.html  CommentController$.html  CommentHtml$.html  Container$.html  DeferredAction$.html  DeferredAction$DeferralResult.html  DeferredAction.html  DeferredSiteAction.html  EitherMapping.html  EmptyMapping$.html  EmptyRequest.html  (+207 more)
api/index/: index-_.html  index-a.html  index-b.html  index-c.html  index-d.html  index-e.html  index-f.html  index-g.html  index-h.html  index-i.html  index-j.html  index-k.html  index-l.html  index-m.html  index-n.html  index-o.html  index-p.html  index-q.html  index-r.html  index-s.html  index-t.html  index-u.html  index-v.html  index-w.html  index-x.html  index-y.html  index-z.html
api/ingest/: Adolph$.html  Asset.html  CSV$.html  Curated$$ModelSession.html  Curated$$PopulateException$.html  Curated$$PopulateException.html  Curated$.html  IngestException.html  Json.html  JsonException.html  Parse$$AbstractParser.html  Parse$$ENUM.html  Parse$$ListData.html  Parse$$ListDataParser.html  Parse$$ListParser.html  Parse$$Parser.html  Parse$.html  ParseException$.html  ParseException.html  PopulateException$.html  PopulateException.html  package.html
api/models/: AbstractSlot.html  (+182 more)
app/: global.scala  util.scala
conf/: .gitignore  application.conf  context.routes.tmp  logback-access.xml  logger.xml  messages  pgranges.sql  play.plugins  routes  schema.sql  transcode  transctl.sh  volume.json
dbrary/: age.scala  arg.scala  build.sbt  cast.scala  columns.scala  connection.scala  enum.scala  inet.scala  macro.scala  offset.scala  package.scala  pgplugin.scala  postgresql.scala  range.scala  result.scala  select.scala  sql.scala  statement.scala  tynorm.scala  types.scala  url.scala  util.scala
macros/: async.scala  build.sbt  cast.scala  lazyvar.scala  macro.scala  maybe.scala  package.scala  repeated.scala
media/: av.c  av.scala  build.sbt  package.scala  passwd.c  passwd.scala
pgranges/: Makefile
project/: Build.scala  angular.scala  ghPagesDoc.scala  git-commit-path  gitDescribe.scala  jsConcatCompiler.scala  plugins.sbt  runsql
schema/: 0.sql  1.sql  1_root.sql
src/: App.hs  Main.hs
tools/: message_report.sh  runsql  transcheck  transcode
web/: .gitignore  debug.js
(+2650 files in other folders)
