Name:                databrary
Version:             0
Synopsis:            Databrary
Description:         An experimental rewrite of Databrary (http://databrary.org, http://github.com/databrary/databrary) in Haskell.
License:             GPL-3
Author:              Dylan Simon
Maintainer:          dylan@dylex.net
Stability:           Experimental
Category:            Web
Build-type:          Custom
Cabal-version:       >=1.6

extra-tmp-files: node_modules, bower_components
data-files: messages.conf,
  schema/*.sql,
  bower_components/jquery/dist/jquery.js,
  bower_components/jquery/dist/jquery.min.js,
  bower_components/angular/angular.js,
  bower_components/angular/angular.min.js
  bower_components/angular-route/angular-route.js,
  bower_components/angular-route/angular-route.min.js,
  bower_components/ng-flow/dist/ng-flow-standalone.js,
  bower_components/ng-flow/dist/ng-flow-standalone.min.js,
  bower_components/lodash/lodash.js,
  bower_components/lodash/lodash.min.js

Source-Repository head
  Type:	git
  Location: https://github.com/dylex/databrary

Flag devel
  description: Enable development mode
  default: True
  manual: True

Executable databrary
  main-is: Databrary/Warp.hs

  other-modules: Databrary.Media.AV
  c-sources: Databrary/Media/av.c

  Build-depends:
    base >= 4.7 && < 5,
    bytestring,
    containers,
    transformers,
    mtl,
    template-haskell,
    th-lift,
    th-lift-instances,
    haskell-src-meta,
    time,
    old-locale,
    unix,
    filepath,
    posix-paths,
    directory,
    process,
    text,
    base64-bytestring,
    utf8-string,
    hashable >= 1.2.3,
    unordered-containers,
    attoparsec,
    byteable,
    network,
    network-uri,
    http-types,
    wai,
    wai-extra,
    warp,
    case-insensitive,
    aeson,
    vector,
    cookie,
    configurator,
    resource-pool,
    scientific,
    postgresql-typed == 0.4.0,
    cryptohash,
    entropy,
    resourcet,
    exceptions,
    monad-control >= 1,
    blaze-markup,
    blaze-html,
    regex-posix,
    bcrypt,
    http-client,
    mime-mail,
    fast-logger,
    digest

  Extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  if flag(devel)
    cpp-options: -DDEVEL

  pkgconfig-depends: libavformat, libswscale, libavcodec, libavutil
  extra-libraries: crack

  build-tools: npm
