Name:                databrary
Version:             0
Synopsis:            Databrary
Description:         An experimental rewrite of Databrary (http://databrary.org, http://github.com/databrary/databrary) in Haskell.
License:             GPL-3
Author:              Dylan Simon
Maintainer:          dylan@dylex.net
Stability:           Experimental
Category:            Web
Build-type:          Custom
Cabal-version:       >=1.6

data-files:
  databrary.conf,
  messages.conf,
  schema/*.sql,
  web/*.min.css,
  web/*.min.js,
  web/icons/*.ico,
  web/icons/*.png,
  web/icons/release/*.svg,
  web/images/*.png,
  web/images/*.svg,
  web/images/elements/*.svg,
  web/images/filetype/16px/*.svg,
  web/images/grants/*.png,
  web/images/icon/*.png,
  web/images/icon/*.svg,
  web/images/logo/*.png,
  web/images/logo/*.svg,
  web/images/profiles/*.png,
  web/images/social/16px/*.png,
  web/lib/*.min.js

Source-Repository head
  Type:	git
  Location: https://github.com/dylex/databrary

Flag devel
  description: Enable development mode
  default: True
  manual: True

Flag tls
  description: Enable TLS/SSL https connections
  default: True

Executable schemabrary
  main-is: Databrary/Setup/DB.hs

Executable databrary
  main-is: Databrary/Main.hs
  other-modules: Databrary.Store.AV
  c-sources: Databrary/Store/avFrame.c

  Build-depends:
    base >= 4.7 && < 5,
    bytestring,
    containers,
    transformers,
    transformers-base,
    mtl,
    template-haskell,
    th-lift,
    th-lift-instances,
    haskell-src-meta,
    time,
    old-locale,
    unix,
    filepath,
    posix-paths,
    directory,
    process,
    text,
    base64-bytestring,
    utf8-string,
    hashable >= 1.2.3,
    unordered-containers,
    attoparsec,
    byteable,
    network,
    network-uri,
    http-types,
    wai,
    wai-extra,
    warp,
    case-insensitive,
    aeson,
    vector,
    cookie,
    configurator,
    resource-pool,
    scientific,
    postgresql-typed == 0.4.0,
    cryptohash,
    entropy,
    resourcet,
    exceptions,
    monad-control >= 1,
    streaming-commons,
    blaze-markup,
    blaze-html,
    regex-posix,
    bcrypt,
    http-client,
    mime-mail,
    fast-logger,
    digest

  if flag(tls)
    Build-depends: warp-tls

  Extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  if flag(devel)
    cpp-options: -DDEVEL

  pkgconfig-depends: libavformat, libswscale, libavcodec, libavutil
  extra-libraries: crack

  build-tools: npm
